# bazel-test

./: .gitignore  BUILD  README.md  WORKSPACE
base-images/: BUILD.bazel
library1/: BUILD.bazel  main.py
microservice1/: BUILD.bazel  main.py  ms1_module.py
microservice2/: BUILD.bazel  main.py
microservice3/: BUILD.bazel  main.py
wheel1/: BUILD.bazel  main.py  setup.py
