load("@rules_python//python:defs.bzl", "py_binary")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

MAIN_SRCS = glob(["*.py"])

py_binary(
  name="microservice1",
  srcs=MAIN_SRCS,
  main="main.py"
)

container_image(
   name="image",
   visibility=["//visibility:public"],
   base="//base-images:python3.8",
   directory="/python",
   files=MAIN_SRCS,
   cmd=["python3", "/python/main.py"],
)
